  introduced about 10 years ago  in FreeType 2.4.11  is now deprecated
  and slated  to be removed in the next version.  TrueType interpreter
  version 40  has been  FreeType default version  for  6 years now and
  provides an excelent alternative.  This is the last FreeType version
  with TT_INTERPRETER_VERSION_38 and TT_INTERPRETER_VERSION_40 treated
  differently.
  
====================================================================== 

CHANGES BETWEEN 2.12.0 and 2.12.1

  I. IMPORTANT BUG FIXES

  - Loading CFF fonts sometimes made FreeType crash (bug introduced in
    version 2.12.0)

  - Loading  a fully  hinted  TrueType glyph  a  second time  (without
    caching) sometimes yielded different rendering results if TrueType
    hinting was active (bug introduced in version 2.12.0).

  - The generation of the pkg-config file `freetype2.pc` was broken if
    the build was done with cmake (bug introduced in version 2.12.0).


  II. MISCELLANEOUS

  - New option `--with-librsvg` for  the `configure` script for better
    FreeType demo support.

  - The  meson  build  no  longer enforces  both  static  and  dynamic
    versions of the library by default.

  - The internal  zlib library was  updated to version  1.2.12.  Note,
    however, that  FreeType is *not* affected  by CVE-2018-25032 since
    it only does decompression.


======================================================================

CHANGES BETWEEN 2.11.1 and 2.12.0

  I. IMPORTANT CHANGES

  - FreeType  now   handles  OT-SVG  fonts,  to   be  controlled  with
    `FT_CONFIG_OPTION_SVG`  configuration macro.   By default,  it can
    only load the 'SVG ' table of an OpenType font.  However, by using
    the `svg-hooks` property of the new 'ot-svg' module it is possible
    to register an  external SVG rendering engine.   The FreeType demo
    programs  have been  set  up  to use  'librsvg'  as the  rendering
    library.

    This work was Moazin Khatti's GSoC 2019 project.


  II. MISCELLANEOUS
